mona/gen/GramParser.py
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GramParser ( Parser ):

    grammarFileName = "GramParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'print'", "'println'", "'lenof'", 
                     "'copyof'", "'floorintof'", "'roundintof'", "'ceilintof'", 
                     "'sin'", "'while'", "'True'", "'False'", "'not'", "'and'", 
                     "'or'", "'decl'", "'ret'", "'if'", "'else'", "'='", 
                     "';'", "':'", "','", "'+'", "'-'", "'*'", "'**'", "'/'", 
                     "'<'", "'<='", "'>'", "'>='", "'=='", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "VAR", "PRINT", "PRINTLN", "LENOF", "COPYOF", 
                      "FLOORINTOF", "ROUNDINTOF", "CEILINTOF", "SIN", "WHILE", 
                      "TRUE", "FALSE", "NOT", "AND", "OR", "DECL", "RET", 
                      "IF", "ELSE", "ASSIGN", "SEMI", "COLON", "COMMA", 
                      "PLUS", "MINUS", "TIMES", "POW", "DIV", "LESSTHAN", 
                      "LESSTHANOREQUAL", "GREATERTHAN", "GREATERTHANOREQUAL", 
                      "EQUALS", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "LBRACE", "RBRACE", "IDEN", "INT", "FLOAT", "CHAR", 
                      "STRING", "LINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_assig_trgt = 2
    RULE_var_declr = 3
    RULE_if_block = 4
    RULE_if_stmt = 5
    RULE_elseif_stmt = 6
    RULE_else_stmt = 7
    RULE_func_decl = 8
    RULE_func_call_expr = 9
    RULE_while = 10
    RULE_assig = 11
    RULE_print = 12
    RULE_stmt_block = 13
    RULE_ret_stmt = 14
    RULE_expr = 15
    RULE_literal = 16
    RULE_lst_decl = 17
    RULE_param_lst = 18
    RULE_arg_lst = 19
    RULE_idx_access = 20

    ruleNames =  [ "program", "stmt", "assig_trgt", "var_declr", "if_block", 
                   "if_stmt", "elseif_stmt", "else_stmt", "func_decl", "func_call_expr", 
                   "while", "assig", "print", "stmt_block", "ret_stmt", 
                   "expr", "literal", "lst_decl", "param_lst", "arg_lst", 
                   "idx_access" ]

    EOF = Token.EOF
    VAR=1
    PRINT=2
    PRINTLN=3
    LENOF=4
    COPYOF=5
    FLOORINTOF=6
    ROUNDINTOF=7
    CEILINTOF=8
    SIN=9
    WHILE=10
    TRUE=11
    FALSE=12
    NOT=13
    AND=14
    OR=15
    DECL=16
    RET=17
    IF=18
    ELSE=19
    ASSIGN=20
    SEMI=21
    COLON=22
    COMMA=23
    PLUS=24
    MINUS=25
    TIMES=26
    POW=27
    DIV=28
    LESSTHAN=29
    LESSTHANOREQUAL=30
    GREATERTHAN=31
    GREATERTHANOREQUAL=32
    EQUALS=33
    LPAREN=34
    RPAREN=35
    LBRACK=36
    RBRACK=37
    LBRACE=38
    RBRACE=39
    IDEN=40
    INT=41
    FLOAT=42
    CHAR=43
    STRING=44
    LINE_COMMENT=45
    WS=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.StmtContext)
            else:
                return self.getTypedRuleContext(GramParser.StmtContext,i)


        def EOF(self):
            return self.getToken(GramParser.EOF, 0)

        def getRuleIndex(self):
            return GramParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = GramParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1374389864398) != 0):
                self.state = 42
                self.stmt()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 48
                self.match(GramParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Stmt_if_blockContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_block(self):
            return self.getTypedRuleContext(GramParser.If_blockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_if_block" ):
                listener.enterStmt_if_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_if_block" ):
                listener.exitStmt_if_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_if_block" ):
                return visitor.visitStmt_if_block(self)
            else:
                return visitor.visitChildren(self)


    class Stmt_stmt_blockContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_stmt_block" ):
                listener.enterStmt_stmt_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_stmt_block" ):
                listener.exitStmt_stmt_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_stmt_block" ):
                return visitor.visitStmt_stmt_block(self)
            else:
                return visitor.visitChildren(self)


    class Stmt_func_declContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func_decl(self):
            return self.getTypedRuleContext(GramParser.Func_declContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_func_decl" ):
                listener.enterStmt_func_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_func_decl" ):
                listener.exitStmt_func_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_func_decl" ):
                return visitor.visitStmt_func_decl(self)
            else:
                return visitor.visitChildren(self)


    class Stmt_assigContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assig(self):
            return self.getTypedRuleContext(GramParser.AssigContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_assig" ):
                listener.enterStmt_assig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_assig" ):
                listener.exitStmt_assig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_assig" ):
                return visitor.visitStmt_assig(self)
            else:
                return visitor.visitChildren(self)


    class Stmt_whileContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def while_(self):
            return self.getTypedRuleContext(GramParser.WhileContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_while" ):
                listener.enterStmt_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_while" ):
                listener.exitStmt_while(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_while" ):
                return visitor.visitStmt_while(self)
            else:
                return visitor.visitChildren(self)


    class Stmt_func_callContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func_call_expr(self):
            return self.getTypedRuleContext(GramParser.Func_call_exprContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_func_call" ):
                listener.enterStmt_func_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_func_call" ):
                listener.exitStmt_func_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_func_call" ):
                return visitor.visitStmt_func_call(self)
            else:
                return visitor.visitChildren(self)


    class Stmt_printContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_(self):
            return self.getTypedRuleContext(GramParser.PrintContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_print" ):
                listener.enterStmt_print(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_print" ):
                listener.exitStmt_print(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_print" ):
                return visitor.visitStmt_print(self)
            else:
                return visitor.visitChildren(self)


    class Stmt_var_declrContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_declr(self):
            return self.getTypedRuleContext(GramParser.Var_declrContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_var_declr" ):
                listener.enterStmt_var_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_var_declr" ):
                listener.exitStmt_var_declr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_var_declr" ):
                return visitor.visitStmt_var_declr(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = GramParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = GramParser.Stmt_var_declrContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.var_declr()
                self.state = 52
                self.match(GramParser.SEMI)
                pass

            elif la_ == 2:
                localctx = GramParser.Stmt_if_blockContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.if_block()
                pass

            elif la_ == 3:
                localctx = GramParser.Stmt_func_declContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.func_decl()
                pass

            elif la_ == 4:
                localctx = GramParser.Stmt_func_callContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 56
                self.func_call_expr()
                self.state = 57
                self.match(GramParser.SEMI)
                pass

            elif la_ == 5:
                localctx = GramParser.Stmt_whileContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.while_()
                pass

            elif la_ == 6:
                localctx = GramParser.Stmt_assigContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 60
                self.assig()
                self.state = 61
                self.match(GramParser.SEMI)
                pass

            elif la_ == 7:
                localctx = GramParser.Stmt_printContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 63
                self.print_()
                self.state = 64
                self.match(GramParser.SEMI)
                pass

            elif la_ == 8:
                localctx = GramParser.Stmt_stmt_blockContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 66
                self.stmt_block()
                self.state = 67
                self.match(GramParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assig_trgtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramParser.RULE_assig_trgt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Assig_trgt_exprContext(Assig_trgtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Assig_trgtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssig_trgt_expr" ):
                listener.enterAssig_trgt_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssig_trgt_expr" ):
                listener.exitAssig_trgt_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssig_trgt_expr" ):
                return visitor.visitAssig_trgt_expr(self)
            else:
                return visitor.visitChildren(self)


    class Assig_trgt_idenContext(Assig_trgtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Assig_trgtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDEN(self):
            return self.getToken(GramParser.IDEN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssig_trgt_iden" ):
                listener.enterAssig_trgt_iden(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssig_trgt_iden" ):
                listener.exitAssig_trgt_iden(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssig_trgt_iden" ):
                return visitor.visitAssig_trgt_iden(self)
            else:
                return visitor.visitChildren(self)



    def assig_trgt(self):

        localctx = GramParser.Assig_trgtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assig_trgt)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = GramParser.Assig_trgt_exprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = GramParser.Assig_trgt_idenContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.match(GramParser.IDEN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(GramParser.VAR, 0)

        def IDEN(self):
            return self.getToken(GramParser.IDEN, 0)

        def ASSIGN(self):
            return self.getToken(GramParser.ASSIGN, 0)

        def assig_trgt(self):
            return self.getTypedRuleContext(GramParser.Assig_trgtContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_var_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declr" ):
                listener.enterVar_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declr" ):
                listener.exitVar_declr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declr" ):
                return visitor.visitVar_declr(self)
            else:
                return visitor.visitChildren(self)




    def var_declr(self):

        localctx = GramParser.Var_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_declr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(GramParser.VAR)
            self.state = 76
            self.match(GramParser.IDEN)
            self.state = 77
            self.match(GramParser.ASSIGN)
            self.state = 78
            self.assig_trgt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(GramParser.If_stmtContext,0)


        def elseif_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.Elseif_stmtContext)
            else:
                return self.getTypedRuleContext(GramParser.Elseif_stmtContext,i)


        def else_stmt(self):
            return self.getTypedRuleContext(GramParser.Else_stmtContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_if_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_block" ):
                listener.enterIf_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_block" ):
                listener.exitIf_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_block" ):
                return visitor.visitIf_block(self)
            else:
                return visitor.visitChildren(self)




    def if_block(self):

        localctx = GramParser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.if_stmt()
            self.state = 84
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 81
                    self.elseif_stmt() 
                self.state = 86
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 87
                self.else_stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(GramParser.IF, 0)

        def LPAREN(self):
            return self.getToken(GramParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(GramParser.RPAREN, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = GramParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(GramParser.IF)
            self.state = 91
            self.match(GramParser.LPAREN)
            self.state = 92
            self.expr(0)
            self.state = 93
            self.match(GramParser.RPAREN)
            self.state = 94
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elseif_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(GramParser.ELSE, 0)

        def IF(self):
            return self.getToken(GramParser.IF, 0)

        def LPAREN(self):
            return self.getToken(GramParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(GramParser.RPAREN, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_elseif_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseif_stmt" ):
                listener.enterElseif_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseif_stmt" ):
                listener.exitElseif_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseif_stmt" ):
                return visitor.visitElseif_stmt(self)
            else:
                return visitor.visitChildren(self)




    def elseif_stmt(self):

        localctx = GramParser.Elseif_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseif_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(GramParser.ELSE)
            self.state = 97
            self.match(GramParser.IF)
            self.state = 98
            self.match(GramParser.LPAREN)
            self.state = 99
            self.expr(0)
            self.state = 100
            self.match(GramParser.RPAREN)
            self.state = 101
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(GramParser.ELSE, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_else_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_stmt" ):
                listener.enterElse_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_stmt" ):
                listener.exitElse_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_stmt" ):
                return visitor.visitElse_stmt(self)
            else:
                return visitor.visitChildren(self)




    def else_stmt(self):

        localctx = GramParser.Else_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_else_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(GramParser.ELSE)
            self.state = 104
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECL(self):
            return self.getToken(GramParser.DECL, 0)

        def IDEN(self):
            return self.getToken(GramParser.IDEN, 0)

        def param_lst(self):
            return self.getTypedRuleContext(GramParser.Param_lstContext,0)


        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = GramParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(GramParser.DECL)
            self.state = 107
            self.match(GramParser.IDEN)
            self.state = 108
            self.param_lst()
            self.state = 109
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_call_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramParser.RULE_func_call_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Sin_callContext(Func_call_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Func_call_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SIN(self):
            return self.getToken(GramParser.SIN, 0)
        def arg_lst(self):
            return self.getTypedRuleContext(GramParser.Arg_lstContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSin_call" ):
                listener.enterSin_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSin_call" ):
                listener.exitSin_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSin_call" ):
                return visitor.visitSin_call(self)
            else:
                return visitor.visitChildren(self)


    class Floor_callContext(Func_call_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Func_call_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOORINTOF(self):
            return self.getToken(GramParser.FLOORINTOF, 0)
        def arg_lst(self):
            return self.getTypedRuleContext(GramParser.Arg_lstContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloor_call" ):
                listener.enterFloor_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloor_call" ):
                listener.exitFloor_call(self)
